codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__replayed_interrupted_reconnect_footer_row.snap
---
source: tui/src/chatwidget/tests.rs
expression: header
---
› Ask Corbanu Terminal to do anything
