codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_archive_confirmation_popup.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Archive this session?
  This will archive the current session and exit Corbanu Terminal.

› No, don't archive      Return to the current session
  Yes, archive and exit  Archive this session now

  Press enter to confirm or esc to go back
